@@ -63,7 +63,8 @@ Returns the old item index (valid for EVT\_TREE\_ITEM\_CHANGING and CHANGED even
 
 \constfunc{wxPoint}{GetPoint}{}
 
-Returns the position of the mouse pointer if the event is a drag event.
+Returns the position of the mouse pointer if the event is a drag or a click
+event.
 
 \membersection{wxTreeEvent::GetCode}
 
